# python-debparse

./: .env  .gitignore  .gitlab-ci.yml  Makefile  pyproject.toml  requirements.test.txt  setup.cfg  setup.py
debparse/: __init__.py  utils.py
debparse/common/: __init__.py  versions.py
debparse/deb_control/: __init__.py  classes.py  fields.py  paragraphs.py
files/: debian_control_example
tests/common/: test_versions.py
tests/debcontrol/: test_debcontrol_fields.py
