[build-system]
requires = ["setuptools>=61.2", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "debparse"
authors = [{name = "Kirill Sibirev", email = "l0kix2@gmail.com"}]
license = {text = "BSD"}
description = "Parse and inspect debian source files"
keywords = ["debparse"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
]
urls = {Homepage = "https://github.com/l0kix2/debparse"}
dynamic = ["readme", "version"]
dependencies = []

[project.optional-dependencies]
tests = ["pytest", "ipdb"]

[tool.setuptools]
packages = ["debparse"]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
readme = {file = ["README.rst", "HISTORY.rst"]}

[tool.wheel]
universal = true
