[metadata]
name = debparse
version = 0.1.0
author = Kirill Sibirev
author_email = l0kix2@gmail.com
license = BSD
description = Parse and inspect debian source files
keywords = debparse
url = https://github.com/l0kix2/debparse
long_description = file: README.rst, HISTORY.rst
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[options]
packages = debparse
zip_safe = False
install_requires =
include_package_data = True
tests_require = pytest; ipdb

[options.extras_require]
tests = pytest; ipdb

[wheel]
universal = 1
